MWPW-139928 (fix): Fixes TextCard title 3rd line showing (#139)
* MWPW-139928 (fix): Fixes TextCard title 3rd line showing

* MWPW-139928 (fix): Fixes TextCard title 3rd line showing

* MWPW-139848 (fix): CaaS Card collection CTA letter cutoff

--- a/less/components/consonant/cards/product-card.less
+++ b/less/components/consonant/cards/product-card.less
@@ -23,12 +23,11 @@
             display: -webkit-box;
             -webkit-box-orient: vertical;
             max-height: 1.375rem * 2;
-            margin: 6px 0 16px;
+            margin: 6px 0 10px;
             text-decoration: none;
             word-break: break-word;
             -webkit-line-clamp: 2;
             overflow: hidden;
-            line-height: 1;
         }
 
         .consonant-Card-text {
